# rust-actix-web-mongodb

./: .env.sample  .gitignore  Cargo.toml  README.md  delete-user.http  get-all-users.http  get-user.http  post-user.http  update-user.http
src/: main.rs
src/api/: user_api.rs
src/db/: mod.rs  mongo_database.rs
