[package]
name = "rust-actix-web-mongodb"
version = "0.1.0"
authors = ["Paul Rogers <paulr909@proton.me>"]
edition = "2018"

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]